Home screen layout and items are done
The recyclerView adapter for new releases is created and the layout for the home screen is created. This app uses dark screen.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/black"
     tools:context=".presentation.ui.MainActivity">
 
     <androidx.fragment.app.FragmentContainerView
@@ -24,10 +25,9 @@
         style="@style/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black_translucent"
+        android:background="@android:color/transparent"
         android:clipToPadding="true"
         android:paddingVertical="7dp"
-        app:elevation="0dp"
         app:itemIconTint="@color/gray"
         app:itemTextColor="@color/gray"
         app:layout_constraintBottom_toBottomOf="parent"
